# Python-Project

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  database.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: cca5c4aeb51d_percents.py
project1/: Dockerfile  app.py  consumer.py  dependencies.py  lifecycle.py  main.py  tasks.py  tkq.py
project1/api/: router.py
project1/api/binary_tree/: dtos.py  views.py
project1/api/percents/: dtos.py  views.py
project1/api/users/: consumer.py  dtos.py  views.py
project1/api/websockets/: views.py
project1/db/: models.py
project1/db/migrations/: env.py
project1/db/migrations/versions/: ebce488c9525_.py
project1/dependencies/: dependencies.py
project1/migrations/: env.py
project1/migrations/versions/: ebce488c9525_.py
tests/: conftest.py  test_main.py
