[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Yaroslav <kapliny@mcmaster.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
psycopg = "^3.1.8"
psycopg-binary = "^3.1.8"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
